alb-template-acg.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Using CloudWatch for Resource Monitoring\

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.99.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: SysOpsVPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: {}
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  DMZ1public:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '0'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.1.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DMZ1public
  DMZ2public:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '1'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.2.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DMZ2public
  AppLayer1private:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '0'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.11.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: AppLayer1private
  AppLayer2private:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '1'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.12.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: AppLayer2private
  DBLayer1private:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '0'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.21.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DBLayer1private
  DBLayer2private:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - '1'
          - Fn::GetAZs: ''
      CidrBlock: 10.99.22.0/24
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DBLayer2Private
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: PublicRT
  RouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DMZ1public
      RouteTableId:
        Ref: PublicRT
  RouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DMZ2public
      RouteTableId:
        Ref: PublicRT
  RoutePublicNATToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
    DependsOn: VPCGatewayAttachment
  NATElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: VPCGatewayAttachment
  NATGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NATElasticIP
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NATElasticIP
          - AllocationId
      SubnetId:
        Ref: DMZ2public
  NATGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGateway
  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: PrivateRT
  RouteTableAssociationC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: AppLayer1private
      RouteTableId:
        Ref: PrivateRT
  RouteTableAssociationD:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: AppLayer2private
      RouteTableId:
        Ref: PrivateRT
  RouteTableAssociationE:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DBLayer1private
      RouteTableId:
        Ref: PrivateRT
  RouteTableAssociationF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DBLayer2private
      RouteTableId:
        Ref: PrivateRT
  DMZNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DMZNACL
  SubnetNetworkAclAssociationA:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DMZ1public
      NetworkAclId:
        Ref: DMZNACL
  SubnetNetworkAclAssociationB:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DMZ2public
      NetworkAclId:
        Ref: DMZNACL
  DMZNACLEntryIngress100:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '100'
      Protocol: '6'
      PortRange:
        From: '22'
        To: '22'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryIngress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '80'
        To: '80'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryIngress120:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '120'
      Protocol: '6'
      PortRange:
        From: '443'
        To: '443'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryIngress130:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '130'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryEgress100:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '100'
      Protocol: '6'
      PortRange:
        From: '22'
        To: '22'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryEgress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '80'
        To: '80'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryEgress120:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '120'
      Protocol: '6'
      PortRange:
        From: '443'
        To: '443'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  DMZNACLEntryEgress130:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DMZNACL
    Properties:
      NetworkAclId:
        Ref: DMZNACL
      RuleNumber: '130'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  AppNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: AppNACL
  SubnetNetworkAclAssociationC:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: AppLayer1private
      NetworkAclId:
        Ref: AppNACL
  SubnetNetworkAclAssociationD:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: AppLayer2private
      NetworkAclId:
        Ref: AppNACL
  AppNACLEntryIngress100:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '100'
      Protocol: '6'
      PortRange:
        From: '22'
        To: '22'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 10.99.0.0/16
  AppNACLEntryIngress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '80'
        To: '80'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 10.99.0.0/16
  AppNACLEntryIngress120:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '120'
      Protocol: '6'
      PortRange:
        From: '443'
        To: '443'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 10.99.0.0/16
  AppNACLEntryIngress130:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '130'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  AppNACLEntryEgress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '80'
        To: '80'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  AppNACLEntryEgress120:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '120'
      Protocol: '6'
      PortRange:
        From: '443'
        To: '443'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  AppNACLEntryEgress130:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: AppNACL
    Properties:
      NetworkAclId:
        Ref: AppNACL
      RuleNumber: '130'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 10.99.0.0/16
  DBNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DBNACL
  SubnetNetworkAclAssociationE:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DBLayer1private
      NetworkAclId:
        Ref: DBNACL
  SubnetNetworkAclAssociationF:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DBLayer2private
      NetworkAclId:
        Ref: DBNACL
  DBNACLEntryIngress100:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '100'
      Protocol: '6'
      PortRange:
        From: '3306'
        To: '3306'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 10.99.0.0/16
  DBNACLEntryIngress105:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '105'
      Protocol: '6'
      PortRange:
        From: '22'
        To: '22'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 10.99.0.0/16
  DBNACLEntryIngress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
  DBNACLEntryEgress100:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '100'
      Protocol: '6'
      PortRange:
        From: '3306'
        To: '3306'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 10.99.0.0/16
  DBNACLEntryEgress105:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '105'
      Protocol: '6'
      PortRange:
        From: '80'
        To: '80'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  DBNACLEntryEgress106:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '106'
      Protocol: '6'
      PortRange:
        From: '443'
        To: '443'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  DBNACLEntryEgress110:
    Type: AWS::EC2::NetworkAclEntry
    DependsOn: DBNACL
    Properties:
      NetworkAclId:
        Ref: DBNACL
      RuleNumber: '110'
      Protocol: '6'
      PortRange:
        From: '1024'
        To: '65535'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - Ref: DMZ1public
        - Ref: DMZ2public
      Name: load-balancer
      Type: application
      Scheme: internet-facing
      SecurityGroups:
        - Ref: LoadBalancerSecurityGroup
      IpAddressType: ipv4
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: TargetGroup
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: '80'
      Protocol: HTTP
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: '10'
      HealthCheckPath: "/phpinfo.php"
      HealthCheckPort: '80'
      HealthCheckProtocol: HTTP
      HealthyThresholdCount: '2'
      Name: TG1
      Port: '80'
      Protocol: HTTP
      UnhealthyThresholdCount: '2'
      VpcId:
        Ref: VPC
  WebInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: WebInstanceRole
  WebInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: awscli
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                  - ec2:*
                  - rds:*
                  - elasticfilesystem:*
                  - logs:*
                  - cloudwatch:*
                Resource: "*"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
  DatabaseInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: DatabaseInstanceRole
  DatabaseInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: awscli
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ec2:*
                  - logs:*
                  - cloudwatch:*
                Resource: "*"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: wordpress-bastion
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: BastionSG
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: wordpress-elb
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: LoadBalancerSG
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: wordpress-ec2
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: WebServerSG
      SecurityGroupIngress:
        - FromPort: 22
          IpProtocol: tcp
          SourceSecurityGroupId:
            Ref: BastionSecurityGroup
          ToPort: 22
        - FromPort: 80
          IpProtocol: tcp
          SourceSecurityGroupId:
            Ref: LoadBalancerSecurityGroup
          ToPort: 80
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: wordpress-rds
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: DatabaseSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: BastionSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId:
            Ref: WebServerSecurityGroup
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId:
            Ref: WebServerSecurityGroup
  LaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - install_packages
        install_packages:
          packages:
            yum:
              httpd24: []
              php70: []
              php70-mysqlnd: []
    Properties:
      ImageId: ami-0caeee8d52d79e604
      InstanceType: t3.micro
      IamInstanceProfile:
        Ref: WebInstanceProfile
      SecurityGroups:
        - Ref: WebServerSecurityGroup
      AssociatePublicIpAddress: false
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash -xe
            /bin/echo 'Jh+)lc9c' | /bin/passwd cloud_user --stdin
            yum update -y
            /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource LaunchConfiguration
            yum list installed httpd24 php70 php70-mysqlnd
            cd /var/www/html
            curl -sL https://wordpress.org/latest.tar.gz | tar xfz -
            mv wordpress/* ./
            rm -rf wordpress
            chown -R apache /var/www
            chgrp -R apache /var/www
            chmod 2775 /var/www
            find /var/www -type d -exec sudo chmod 2775 {} \;
            find /var/www -type f -exec sudo chmod 0664 {} \;
            cp wp-config-sample.php wp-config.php
            sed -i "s/database_name_here/wordpress"/g wp-config.php
            sed -i "s/username_here/wpuser/g" wp-config.php
            sed -i "s/password_here/Password1/g" wp-config.php
            sed -i "s/localhost/${Database.PrivateIp}/g" wp-config.php
            echo "<?php phpinfo(); ?>" > /var/www/html/phpinfo.php
            service httpd start
            service httpd status
            chkconfig httpd on
            /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource LaunchConfiguration
      InstanceMonitoring: true
  Database:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          default:
            - install_packages
        install_packages:
          packages:
            yum:
              mysql56-server: []
    Properties:
      ImageId: ami-0caeee8d52d79e604
      InstanceType: t3.micro
      IamInstanceProfile:
        Ref: DatabaseInstanceProfile
      SubnetId:
        Ref: DBLayer1private
      SecurityGroupIds:
        - Ref: DatabaseSecurityGroup
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash -xe
            /bin/echo 'Jh+)lc9c' | /bin/passwd cloud_user --stdin
            yum update -y
            /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource Database
            yum list installed mysql56-server
            service mysqld start
            chkconfig mysqld on
            mysql mysql << EOM
              CREATE DATABASE wordpress;
              GRANT ALL PRIVILEGES ON wordpress.* to wpuser IDENTIFIED BY 'Password1';
              DELETE FROM user WHERE user = '';
              FLUSH PRIVILEGES;
            EOM
            /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource Database
      Tags:
        - Key: Name
          Value: database
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      TargetGroupARNs:
        - Ref: TargetGroup
      LaunchConfigurationName:
        Ref: LaunchConfiguration
      MinSize: '1'
      MaxSize: '2'
      DesiredCapacity: '2'
      Cooldown: '300'
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      VPCZoneIdentifier:
        - Ref: AppLayer1private
        - Ref: AppLayer2private
      Tags:
        - PropagateAtLaunch: true
          Value: instance-wordpress
          Key: Name
  BastionLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: ami-0caeee8d52d79e604
      InstanceType: t3.micro
      IamInstanceProfile:
        Ref: WebInstanceProfile
      SecurityGroups:
        - Ref: BastionSecurityGroup
      AssociatePublicIpAddress: true
      InstanceMonitoring: true
  BastionAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchConfigurationName:
        Ref: BastionLaunchConfig
      MinSize: '1'
      MaxSize: '1'
      DesiredCapacity: '1'
      Cooldown: '300'
      HealthCheckGracePeriod: 300
      HealthCheckType: EC2
      VPCZoneIdentifier:
        - Ref: DMZ1public
        - Ref: DMZ2public
      Tags:
        - PropagateAtLaunch: true
          Value: bastion-host
          Key: Name
